--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.28.0",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
